2010-10-19  Marc-André Lureau  <mlureau@flumotion.com>

	reviewed and corrected by: Andoni Morales Alastruey

	* merged Smooth Streaming branch from git
	453cc2f262b64c0508f6b918b74677b5f287a819.

2010-10-05  Andoni Morales Alastruey  <amorales@flumotion.com>

	* flumotion/component/muxers/mpegts/mpegts.py:
	Add removed import in last commit

2010-10-04  Andoni Morales Alastruey  <amorales@flumotion.com>

	* flumotion/component/muxers/mpegts/mpegts.py:
	* flumotion/component/muxers/mpegts/mpegts.xml:
	Add support for audio only streams using the video stream
	only for synchronisation

2010-07-14  Marc-André Lureau  <mlureau@flumotion.com>

	reviewed by: Julien Le Goff

	* flumotion/component/consumers/applestreamer/applestreamer.py:
	* flumotion/component/consumers/applestreamer/mpegtssegmenter.py:
	The new segment trick from the previous patch was not really a
	good solution. Instead, sync=false on the applestreamer appsink.

2010-07-13  Marc-André Lureau  <mlureau@flumotion.com>

	reviewed by: Xavier Queralt

	* flumotion/component/consumers/applestreamer/applestreamer.py:
	* flumotion/component/consumers/applestreamer/mpegtssegmenter.py:
	* flumotion/component/muxers/mpegts/mpegts.py:
	* flumotion/component/muxers/mpegts/mpegts.xml:
	Do segment per 1-keyframe at the muxer level to avoid reaching the
	limit of 500 TS buffers at the multifdsink level (network speed
	variability can hit this limit at the feeder level, and cause huge
	number of buffer drops, resulting in discontinuities and 404 and
	the streamer level)

2010-07-09  Marc-André Lureau  <mlureau@flumotion.com>

	reviewed by: Andoni Morales Alastruey

	* flumotion/component/consumers/applestreamer/resources.py:
	Do not use "chunked" HTTP for fragments data.
	This is a regression from iOS 4.0. See #10794.

2010-04-20  Alvin Delagon  <adelagon@flumotion.com>

	reviewed by: Xavier Martinez

	* flumotion/component/muxers/mpegts/mpegts.py:
	Send a meaningful error when 'mpegtsmux' is not installed.
